# readyforSupabase

./: .gitignore  Funding Bay & FBX Deals - Raw data v2 (1).csv  README.md  backfill_lead_magnet.py  backfill_partner_display_names.py  backfill_partner_referral.py  check_custom_activities.py  fetch_activity_type_names.py  generate_alter_table.py  import_dealsheet_v2.py  import_leads.py  import_partners.py  link_custom_activities.py  main.py  opencode.json  ops_cli.py  pyproject.toml  rename_close_leads.py  rename_headers.py  requirements.txt  reset_password.py  tabular_cleaner.py  upsert_partner_missing_leads_and_custom_activities.py
dashboard/: app.py  requirements.txt
dashboard/static/: app.js  index.html  style.css
docs/: OPERATIONS.md
output/: activity_type_names.json  alter_leads_add_columns.sql  dealsheet_cleaned.csv  dealsheet_report.json  dealsheet_supabase_ready.csv  missing_partners_upsert_ready.csv  sample_messy_cleaned.csv  sample_messy_report.json  sample_messy_schema_suggestion.sql  tla_data_cleaned.csv  tla_data_report.json
packaging/: readyforSupabase.spec
scripts/: build_exe.ps1
